--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="w-100">
         <p class="paragraf">
           Estudo sobre tecnologia a mais de 1 ano cursando tecnólogo em Análise e Desenvolvimento de Sistemas.
-          Hoje ja tenho conhecimento sobra as tecnologias JavaScript, Html5, Css3, NodeJS, React, Ruby-On-Rails, Git e
+          Hoje ja tenho conhecimento sobre as tecnologias JavaScript, Html5, Css3, NodeJS, React, Ruby-On-Rails, Git e
           estou estudando todos os dias para aprender e me qualificar mais para o mercado de trabalho.
         </p>
       </div>
@@ -35,7 +35,7 @@
 
     <div class="h-experiencia">
       <div class="h-title-expericencia">
-        <h2>Expericências</h2>
+        <h2>Experiências</h2>
       </div>
       <div class="h-itens">
 
@@ -144,22 +144,22 @@
 
       <div class="w-100 item">
         <h2>Telefone:</h2>
-        <p>(83) 99117-3791</p>
+        <a href="tel:+">(83) 99117-3791</a>
       </div>
 
       <div class="w-100 item">
         <h2>E-mail:</h2>
-        <p>kleytonb8@gmail.com</p>
+        <a href="mailto: kleytonb8@gmail.com">kleytonb8@gmail.com</a>
       </div>
 
       <div class="w-100 item">
         <h2>linkedin:</h2>
-        <p>https://www.linkedin.com/in/ozy-kleyton-barbosa-da-silva-472319216/</p>
+        <a href="https://www.linkedin.com/in/ozy-kleyton-barbosa-da-silva-472319216/">linkedin</a>
       </div>
 
       <div class="w-100 item">
         <h2>GitHub:</h2>
-        <p>https://github.com/ozykt4</p>
+        <a href="https://github.com/ozykt4">GitHub</a>
       </div>
     </div>
   </div>
