--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="h-name">
       <h1>Ozy Kleyton Barbosa da silva</h1>
-      <h2>Desenvolvedor Web</h2>
+      <h2>Desenvolvedor Web Backend</h2>
     </div>
 
     <div class="h-sobre">
@@ -154,7 +154,7 @@
 
       <div class="w-100 item">
         <h2>linkedin:</h2>
-        <a href="https://www.linkedin.com/in/ozy-kleyton-barbosa-da-silva-472319216/">linkedin</a>
+        <a href="https://www.linkedin.com/in/ozy-kleyton-barbosa-da-silva/">linkedin</a>
       </div>
 
       <div class="w-100 item">
