--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           </div>
 
           <div class="description">
-            <h2>Desenvolvedor de Software Júnior</h2>
-            <p>Usando Ruby-On-Rails realizava tarefas como crud, testes, manutenção do codigo. </p>
+            <h2>Desenvolvedor de Software Júnior - Fullstack</h2>
+            <p>Usando Ruby-On-Rails realizava tarefas como crud, desenvolver documentações, manutenção do codigo. </p>
           </div>
         </div>
 
@@ -81,6 +81,19 @@
 
       <div class="h-habilidades-title">
         <h2>Habilidades</h2>
+      </div>
+
+      <div class="item">
+
+        <div class="title">
+          <h2>Html5 - Css3</h2>
+        </div>
+
+        <div class="icon">
+          <div class="percentual-70">
+
+          </div>
+        </div>
       </div>
 
       <div class="item">
@@ -129,11 +142,51 @@
         </div>
 
         <div class="icon">
+          <div class="percentual-100">
+
+          </div>
+        </div>
+      </div>
+
+      <div class="item">
+
+        <div class="title">
+          <h2>Bootstrap</h2>
+        </div>
+
+        <div class="icon">
+          <div class="percentual-70">
+
+          </div>
+        </div>
+      </div>
+
+      <div class="item">
+
+        <div class="title">
+          <h2>Git-GitHub</h2>
+        </div>
+
+        <div class="icon">
+          <div class="percentual-100">
+
+          </div>
+        </div>
+      </div>
+
+      <div class="item">
+
+        <div class="title">
+          <h2>Docker</h2>
+        </div>
+
+        <div class="icon">
           <div class="percentual-50">
 
           </div>
         </div>
       </div>
+
     </div>
 
     <div class="h-contato">
